tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_haskell_data_type_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "data Person = Person String Int",
      "end_line": 2,
      "language": "haskell",
      "name": "unknown",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "data Maybe a = Nothing | Just a",
      "end_line": 4,
      "language": "haskell",
      "name": "unknown",
      "original_indentation": 0,
      "start_line": 4
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "data Tree a = Leaf a | Node (Tree a) (Tree a)",
      "end_line": 6,
      "language": "haskell",
      "name": "unknown",
      "original_indentation": 0,
      "start_line": 6
    }
  ],
  "source_code": "\ndata Person = Person String Int\n\ndata Maybe a = Nothing | Just a\n\ndata Tree a = Leaf a | Node (Tree a) (Tree a)\n",
  "test_name": "test_haskell_data_type_extraction",
  "total_chunks": 3
}
