tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_java_class_method_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "public class HelloWorld {\n    private String message;\n\n    public HelloWorld(String message) {\n        this.message = message;\n    }\n\n    public void printMessage() {\n        System.out.println(this.message);\n    }\n\n    public static void main(String[] args) {\n        HelloWorld hello = new HelloWorld(\"Hello, World!\");\n        hello.printMessage();\n    }\n\n    private int calculateLength() {\n        return this.message.length();\n    }\n}",
      "end_line": 20,
      "language": "java",
      "name": "HelloWorld",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    private String message;",
      "end_line": 2,
      "language": "java",
      "name": "message",
      "original_indentation": 4,
      "start_line": 2
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    public HelloWorld(String message) {\n        this.message = message;\n    }",
      "end_line": 6,
      "language": "java",
      "name": "HelloWorld",
      "original_indentation": 4,
      "start_line": 4
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    public void printMessage() {\n        System.out.println(this.message);\n    }",
      "end_line": 10,
      "language": "java",
      "name": "printMessage",
      "original_indentation": 4,
      "start_line": 8
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    public static void main(String[] args) {\n        HelloWorld hello = new HelloWorld(\"Hello, World!\");\n        hello.printMessage();\n    }",
      "end_line": 15,
      "language": "java",
      "name": "main",
      "original_indentation": 4,
      "start_line": 12
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "    private int calculateLength() {\n        return this.message.length();\n    }",
      "end_line": 19,
      "language": "java",
      "name": "calculateLength",
      "original_indentation": 4,
      "start_line": 17
    }
  ],
  "source_code": "public class HelloWorld {\n    private String message;\n\n    public HelloWorld(String message) {\n        this.message = message;\n    }\n\n    public void printMessage() {\n        System.out.println(this.message);\n    }\n\n    public static void main(String[] args) {\n        HelloWorld hello = new HelloWorld(\"Hello, World!\");\n        hello.printMessage();\n    }\n\n    private int calculateLength() {\n        return this.message.length();\n    }\n}",
  "test_name": "test_java_class_method_extraction",
  "total_chunks": 6
}
